# vanilla-magic

./: README.md  vanilla-magic.cabal
app/: Main.hs
src/: Util.hs
src/Data/: Color.hs  PartialOrd.hs
src/Data/Mana/: Cost.hs  Cost1.hs
src/Util/: Applicative.hs  List.hs
